--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     //AWS S3
- //   implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    //mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
