--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-application.properties
+
 ### STS ###
 .apt_generated
 .classpath
@@ -16,7 +16,7 @@ application.properties
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
-
+df.java
 ### IntelliJ IDEA ###
 .idea
 *.iws
