--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+
 }
 
 repositories {
@@ -36,6 +37,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     //mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    //
+    implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
+
 }
 
 tasks.named('test') {
