--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-# This workflow will build a Java project with Gradle
+# This workflow will build run_new_was.sh Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
 # Repo Action 페이지에 나타날 이름 
